# openmvs-begin

./: CMakeLists.txt
Apps/: CMakeLists.txt
Apps/DensifyPointCloud/: CMakeLists.txt  DensifyPointCloud.cpp
Modules/Common/Primitives/: CMakeLists.txt
